# IsoRealms

./: .gitignore  CMakeLists.txt  CheckList.txt  Engine.cpp  Engine.h  FutureProjects.txt  IEngineArguments.h  IsoRealms.cpp  IsoRealms.h  LuabindConfig.cmake  Main.cpp  Main.h  Makefile  README  RealClean  Runtime.cpp  Runtime.h  Spindizzy  Spindizzy.cmd  Spindizzy.nsi  SteppedBottomTest.isorealms  TODO  TerminateEngineCommand.cpp  TerminateEngineCommand.h  Test.isorealms  Ubuntu-Dev.txt  configuration.xml  spindizzyremake.mk  spindizzyremake.workspace
Elements/SpindizzyBlocks/: AbstractSpindizzyBlock.cpp  AbstractSpindizzyBlock.h  BlockStateCommand.cpp  BlockStateCommand.h  BlockTypeProperties.cpp  BlockTypeProperties.h  CMakeLists.txt  HUDClue.cpp  HUDClue.h  IComponentCloseListener.h  ISpindizzyBlock.h  ISpindizzyBlockFactory.cpp  ISpindizzyBlockFactory.h  ISpindizzyBlockSet.h  ISpindizzyTileSurface.h  ISpindizzyWallSurface.h  ISurfaceCalculator.h  ISurfaceProcessorProxy.h  Makefile  RollableSplitSurface.cpp  RollableSplitSurface.h  RollableSurface.cpp  RollableSurface.h  SpindizzyBlock.cpp  SpindizzyBlock.h  SpindizzyBlockConfigurationComponent.cpp  SpindizzyBlockConfigurationComponent.h  SpindizzyBlockConfigurationDialog.cpp  SpindizzyBlockConfigurationDialog.h  SpindizzyBlockFactory.cpp  SpindizzyBlockFactory.h  SpindizzyBlockHandler.cpp  SpindizzyBlockProperties.cpp  SpindizzyBlockProperties.h  SpindizzyBlockSet.cpp  SpindizzyBlockSet.h  SpindizzyIceBlock.cpp  SpindizzyIceBlock.h  SpindizzySwitchBlock.cpp  SpindizzySwitchBlock.h  (+15 more)
Elements/SpindizzyLifts/: CMakeLists.txt  ISpindizzyLiftFactory.h  ISpindizzyLiftSet.h  LiftSurfaceCollisionEvent.h  Makefile  SpindizzyLift.cpp  SpindizzyLift.h  SpindizzyLiftConfigurationComponent.cpp  SpindizzyLiftConfigurationComponent.h  SpindizzyLiftConfigurationDialog.cpp  SpindizzyLiftConfigurationDialog.h  SpindizzyLiftFactory.cpp  SpindizzyLiftFactory.h  SpindizzyLiftHandler.cpp  SpindizzyLiftHandler.h  SpindizzyLiftProperties.cpp  SpindizzyLiftProperties.h  SpindizzyLiftSet.cpp  SpindizzyLiftSet.h  SurfaceCollisionEvent.cpp  SurfaceCollisionEvent.h
IsoRealms/: .directory  AbstractAssetRegistry.h  AbstractResourceRegistry.h  ActionClient.cpp  ActionClient.h  ActionContext.cpp  ActionContext.h  ActionExecutor.cpp  ActionExecutor.h  AnimatedFloat.cpp  AnimatedFloat.h  AnimatedInteger.cpp  AnimatedInteger.h  Application.cpp  Application.h  BlockArea.cpp  BlockArea.h  BlockLocation.cpp  BlockLocation.h  CMakeLists.txt  Collision.cpp  Collision.h  CollisionVertex.cpp  CollisionVertex.h  Colour.cpp  Colour.h  ColourProxy.cpp  ColourProxy.h  CommandDirectory.cpp  CommandDirectory.h  CommandManager.h  CommandProxy.cpp  CommandProxy.h  CommandRegistryProxy.cpp  CommandRegistryProxy.h  Component.h  ComponentDefinition.h  ComponentEditor.cpp  ComponentEditor.h  ComponentLoader.cpp  (+256 more)
IsoRealms/Assets/: IBindingRegistry.h  IEventBindings.h
IsoRealms/Collision/: CollisionData.cpp  CollisionData.h  CollisionUtils.cpp  CollisionUtils.h
IsoRealms/Common/: AnimatedInteger.cpp  IVisualElement.h  Point2D.cpp  Point2D.h  ScreenArea.cpp  ScreenArea.h  ScreenLocation.cpp  ScreenLocation.h
IsoRealms/Condition/: Condition.cpp  Condition.h  ConditionElement.cpp  ConditionElement.h  IConditionElementIcons.h
IsoRealms/Editing/: AbstractMenu.cpp  AbstractMenu.h  ActionMenu.cpp  ActionMenu.h  CategoryMenu.cpp  CategoryMenu.h  Choice.cpp  Choice.h  ComponentTypeMenu.cpp  ComponentTypeMenu.h  Configurator.cpp  Configurator.h  ConfiguratorSignalID.h  EditorToolbar.h  IComponentAccessManager.h  IConfiguratorScreen.h  IConfirmationManager.h  IDialogManager.h  IMenuItem.h  IResourceAccessManager.h  IUIConfiguration.h  IUIScreen.h  IUIStyle.h  Menu.h  MenuItemAction.cpp  MenuItemAction.h  MenuItemComponent.cpp  MenuItemComponent.h  MenuItemLoadModule.cpp  MenuItemLoadModule.h  MenuItemModule.cpp  MenuItemModule.h  MenuItemProperty.cpp  MenuItemProperty.h  MenuItemResource.cpp  MenuItemResource.h  MenuItemSpacer.cpp  MenuItemSpacer.h  ProjectMenu.cpp  ProjectMenu.h  (+7 more)
IsoRealms/Exception/: ActionException.cpp  ActionException.h  ApplicationException.cpp  ApplicationException.h  ArgumentException.cpp  ArgumentException.h  ComponentInitException.cpp  ComponentInitException.h  IllegalStateException.cpp  IllegalStateException.h  InitException.cpp  InitException.h  ResourceInitException.cpp  ResourceInitException.h
IsoRealms/GUI/: AbstractRectangularComponent.cpp  AbstractRectangularComponent.h  AbstractVerticalComponent.h  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  CheckBoxWithLabel.cpp  CheckBoxWithLabel.h  CloseDialogCommand.cpp  ComponentCustomType.h  ComponentDigitalInputMapping.cpp  ComponentDigitalInputMapping.h  ComponentEdgeLayout.h  ComponentResourceColourSelector.cpp  ComponentResourceColourSelector.h  ComponentResourceSelector.h  ComponentResourceTextureSelector.cpp  ComponentResourceTextureSelector.h  ComponentScriptCall.cpp  ComponentScriptCall.h  ComponentTable.cpp  ComponentTable.h  Container.cpp  Container.h  Dialog.cpp  Dialog.h  DropDownListComponent.cpp  DropDownListComponent.h  DynamicMenuItems.cpp  DynamicMenuItems.h  FixedSizeLayout.cpp  FixedSizeLayout.h  FlexibleGridLayoutComponent.cpp  FlexibleGridLayoutComponent.h  GUIIcon.cpp  GUIIcon.h  GridLayoutComponent.cpp  GridLayoutComponent.h  IComponentBoundsCalculator.h  (+61 more)
IsoRealms/Input/: AxisMapping.cpp  AxisMapping.h  ButtonMapping.cpp  ButtonMapping.h  DigitalInput.cpp  DigitalInput.h  EditorAnalogueInput.h  EditorDigitalInput.h  HatHandler.cpp  HatHandler.h  HatMapping.cpp  HatMapping.h  IAnalogueInputMapping.h  IDigitalInputMapping.h  InputCommands.cpp  InputCommands.h  KeyMapping.cpp  KeyMapping.h  KeyStates.cpp  KeyStates.h  MouseButtonMapping.cpp  MouseButtonMapping.h  SDLKeyMap.cpp
IsoRealms/Lua/: LocalLuaBinding.h  LuaBinding.h  LuaState.cpp  LuaState.h
IsoRealms/LuaSupport/: ArgumentDefinition.h  ArgumentDefinitionPrimitive.cpp  ArgumentDefinitionPrimitive.h  ArgumentDefinitionReference.cpp  ArgumentDefinitionReference.h  ArgumentDefinitionType.h  (+32 more)
Modules/: CMakeLists.txt
(+3457 files in other folders)
