# Copyright 2009,2010 Martin Brentnall
#
# This file is part of Iso-Realms.
#
# Iso-Realms is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Iso-Realms is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Iso-Realms.  If not, see <http://www.gnu.org/licenses/>.
add_subdirectory(3DModelToHUD)
add_subdirectory(BlockSubtractor)
add_subdirectory(C64SpindizzySprites)
add_subdirectory(C64SpindizzyTextureSet)
add_subdirectory(ChangeableModel)
add_subdirectory(DefaultCollidableSurfaceRegistry)
add_subdirectory(DefaultHUD)
add_subdirectory(Editor)
add_subdirectory(DumbIntegerValue)
add_subdirectory(DynamicElementGroup)
add_subdirectory(ElementModel)
add_subdirectory(FlatRectangle)
add_subdirectory(GLFreeType)
add_subdirectory(HUDRoundedRectangle)
add_subdirectory(ImageTextureSet)
add_subdirectory(MappedZoneHandler)
add_subdirectory(Menu)
add_subdirectory(ScriptableVertex)
add_subdirectory(SDLMixerSupport)
add_subdirectory(SpindizzyBlocks)
add_subdirectory(SpindizzyCamera)
add_subdirectory(SpindizzyEnemies)
add_subdirectory(SpindizzyGERALD)
add_subdirectory(SpindizzyGERALDBallModel)
add_subdirectory(SpindizzyGERALDGyroscopeModel)
add_subdirectory(SpindizzyGERALDPyramidModel)
add_subdirectory(SpindizzyJewelModel)
add_subdirectory(SpindizzyJewels)
add_subdirectory(SpindizzyLifts)
add_subdirectory(StateTiles)
add_subdirectory(StringToHUD)
add_subdirectory(TextureSetPerZone)
add_subdirectory(TimeLimit)
add_subdirectory(TimeString)
add_subdirectory(UserDefinablePalette)
add_subdirectory(ZoneCollectables)
add_subdirectory(ZoneModelRenderer)
add_subdirectory(ZoneOutlineRenderer)
